# eucalyptus

./: .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
api/: .env.template  Dockerfile.api  alembic.ini  main.py  pyproject.toml
api/application/service/: users.py
api/infrastructrure/database/repository/: users.py
api/migration/: README  reset_database.py  script.py.mako
api/migration/versions/: 1a531b500acd_create_table_life_events.py  2023_09_19_1839-30c89a1e58da_create_table_users.py  2023_09_19_1848-f21db4b4c97f_create_table_plans.py  2023_09_19_1849-ff9881bf542d_create_table_life_events.py  2023_09_20_1447-bc8b12fcd7ab_alter_table_users.py  2023_09_25_1535-76eae9971e09_create_table_financial_events.py  6b62a03b755d_create_table_plans.py  71ae9af4bed2_create_table_users.py
api/presentation/controller/: users.py
api/presentation/schema/: users.py
api/src/: main.py
api/src/application/service/: auth.py  financial_events.py  plans.py  users.py
api/src/infrastructrure/auth/: auth.py
api/src/infrastructrure/database/: connection.py
api/src/infrastructure/: auth.py
api/src/infrastructure/database/: connection.py
api/src/presentation/controller/: __init__.py  finacial_events.py  plans.py  users.py
api/src/presentation/schema/: financial_events.py  plans.py  users.py
api/test/application/service/: test_auth.py  test_financial_events.py  test_plans.py  test_users.py
api/test/presentation/controller/: base.py  test_financial_events.py  test_plans.py  test_users.py
(+35 files in other folders)
